...
@implementation SceneDelegate


- (void)scene:(UIScene *)scene willConnectToSession:(UISceneSession *)session options:(UISceneConnectionOptions *)connectionOptions  API_AVAILABLE(ios(13.0)){
    UITabBarController *tab = [[UITabBarController alloc]init];
    DemoViewController *rootVC = [[DemoViewController alloc] init];
    rootVC.title = @"home";
   
    UINavigationController *rootNav = [[UINavigationController alloc] initWithRootViewController:rootVC];
    rootNav.tabBarItem = [[UITabBarItem alloc] initWithTitle:@"home"
                                                       image:[UIImage systemImageNamed:@"house"]
                                               selectedImage:[UIImage systemImageNamed:@"house.fill"]];
    UITestVC *second =  [UITestVC new];
...
