...
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WHU-Q2-qVX">
                    <rect key="frame" x="860.5" y="160" width="199" height="75"/>
                    <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="BindUser">
                        <color key="baseForegroundColor" name="AccentColor"/>
                    </buttonConfiguration>
                    <connections>
                        <action selector="bindUserClick:" destination="-1" eventType="primaryActionTriggered" id="eVW-fz-rBn"/>
                    </connections>
                </button>
...
