...
    //action:launch_cold -> view:UITabBarController ->resource ->view:DemoViewController->action:click->view:DemoViewController->action:click->view:DemoViewController->action:click->view:UITestVC........
    
}
-(UILabel *)successView{
    if (!_successView) {
        _successView = [[UILabel alloc]initWithFrame:CGRectMake(20, 150, 100, 40)];
        _successView.text = @"SUCCESS";
        [self.view addSubview:_successView];
    }
    return _successView;
}
-(UILabel *)lable{
    if (!_lable) {
...
